# myetl

./: pyproject.toml
src/myetl/: agg_data.py  data.csv  data.parquet  load_data.py
tests/: test_dapa.py
