[project]
name = "myetl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "stundrg", email = "kanghr990106@gmail.com"},
]
dependencies = ["pyarrow>=19.0.1", "pandas>=2.2.3", "requests>=2.32.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
